# wdb2ts

./: .cproject  .gitignore  .gitlab-ci.yml  .project  AUTHORS  Makefile.am  README  README.debian  README.md  autogen.sh  build.sh  compile-metlibs.sh  configure.ac  cp_debian_dir.sh.in  create-etcd.sh  tarantino-parametere.txt  wdb2ts_config.h.in
config/: .gitignore  ac_apxs.m4  pgconpool.m4  postgres.m4  topography_input.m4  wdb2ts.m4  wdb_boost.m4  wdb_cppunit.m4  wdb_docbook.m4  wdb_doxygen.m4  wdb_kvalobs.m4  wdb_log4cpp.m4  wdb_postgres.m4  wdb_proj.m4
debian/: README.Debian  changelog  copyright  docs  postinst  postrm  rules
debian_files/: changelog  conffiles  config  control  files  metno-wdb2ts-1.2.postinst  metno-wdb2ts-VERSION.dirs  metno-wdb2ts-VERSION.install  metno-wdb2ts-VERSION.postinst  metno-wdb2ts-VERSION.postrm  postinst  postrm  rules  templates  wdb2ts-etcdcli-VERSION.install
doc/: nextrun.txt  wdb2ts.mk  wdb2tsAPI.html  wdb2ts_user-manual.xml
doc/docbook/: wdb_entities.ent
doc/doxygen/: Doxyfile  design.dox  doxygen.cfg  webFW.dox  webFW_documentation.dox
doc/user/: wdb2ts-location.man.xml  wdb2ts-locationforecast.man.xml  wdb2ts-manual.xml  wdb2ts.man.xml
docker/: README.md
docker/etc/apache2/: 000-default.conf  envvars  mpm_worker.conf
docker/etc/metno-wdb2ts/: metno-wdb2ts-conf.xml  metno-wdb2ts-db.conf  metno-wdb2ts-db.conf.template  metno-wdb2ts-db.conf.test  metno-wdb2ts-db.conf~
docker/runtime/: Dockerfile_wdb2ts  Dockerfile_wdb2ts_etcdcli  Dockerfile_wdb2ts_local  Dockerfile_wdb2ts_runtime_deps  entrypoint.sh  sleep_forever.sh
etc/: .gitignore  metno-wdb2ts-conf-params.xml  metno-wdb2ts-conf.xml.template.in  metno-wdb2ts-db.conf.template.in  metno-wdb2ts.conf.template.in  qbSymbols.def.in
examples/: wdb2ts.mk  wdbget  wdbget.query
kubernetes/: deployment.yaml  service.yaml  wdb2ts-etcdcli-pod.yaml
src/cetcd/: Makefile.in  README  wdb2ts.mk
src/cetcd/cetcd-master/: .gitignore
src/miutil/: Dir.cpp  Dir.h  EnableTimePeriod.cpp  EnableTimePeriod.h  File.cpp  File.h  FileLockHelper.cpp  FileLockHelper.h  Indent.h  Metric.cpp  Metric.h  SAXParser.cc  SAXParser.h  ShapeReader.cpp  ShapeReader.h  StreamReplace.cpp  StreamReplace.h  TempFileStream.cpp  TempFileStream.h  Timer.cpp  Timer.h  Value.cc  Value.h  compresspace.cc  compresspace.h  copyfile.cpp  copyfile.h  etcd.cpp  etcd.h  fileutil.cpp  fileutil.h  geterrstr.cpp  geterrstr.h  gettimeofday.cpp  gettimeofday.h  mathalgo.h  metfunctions.cpp  metfunctions.h  mkdir.cpp  mkdir.h  (+18 more)
src/miutil/test/: ptimeutilTest.cpp  ptimeutilTest.h  wdb2ts.mk
src/mod_wdb2ts/: ConfigUtils.cpp  ConfigUtils.h  DbManager.cpp  DbManager.h  Encode.cpp  Encode.h  HandlerBase.cpp  HandlerBase.h  INoteUpdateListener.h  LocationData.cpp  LocationData.h  LocationElem.cpp  LocationElem.h  LocationPoint.cpp  LocationPoint.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  MetaModelConf.cpp  MetaModelConf.h  Mutex.h  NearestHeight.cpp  NearestHeight.h  NearestLand.cpp  NearestLand.h  NoteManager.cpp  NoteManager.h  NoteProviderList.h  NoteProviderReftime.cpp  NoteProviderReftime.h  NoteProviderReftimeByDbId.cpp  NoteProviderReftimeByDbId.h  NoteString.h  NoteStringList.h  NoteTag.h  ParamDef.cpp  ParamDef.h  PointDataHelper.cpp  PointDataHelper.h  (+75 more)
src/mod_wdb2ts/WciWebQuery/: Makefile.in  UrlParam.cpp  UrlParam.h  UrlParamDataProvider.cpp  UrlParamDataProvider.h  UrlParamDouble.cpp  UrlParamDouble.h  UrlParamFloat.cpp  UrlParamFloat.h  UrlParamFormat.cpp  UrlParamFormat.h  UrlParamInteger.cpp  UrlParamInteger.h  UrlParamLevelSpec.cpp  UrlParamLevelSpec.h  UrlParamParameter.cpp  UrlParamParameter.h  UrlParamPolygon.cpp  UrlParamPolygon.h  UrlParamString.cpp  UrlParamString.h  UrlParamTimeSpec.cpp  UrlParamTimeSpec.h  WciWebQuery.cpp  WciWebQuery.h  wdb2ts.mk
src/mod_wdb2ts/configparser/: Config.cc  Config.h  ConfigParser.cc  ConfigParser.h  Makefile.am  NextRun.cc  NextRun.h  RequestConf.cc  RequestConf.h  State.cc  State.h  wdb2ts.mk  wdb2ts_check_config.cc
src/mod_wdb2ts/test/: Makefile.in  MetaModelTest.cpp  MetaModelTest.h  ProjectionTest.cpp  ProjectionTest.h  QueryMakerTest.cpp  QueryMakerTest.h  SymbolTest.cpp  SymbolTest.h  UpdateWebQueryTest.cpp  UpdateWebQueryTest.h  UrlParamTest.cpp  UrlParamTest.h  VariosTests.cpp  VariosTests.h  WciWebQueryTest.cpp  WciWebQueryTest.h  default_params.xml  default_qerydefs.xml  locationforcast-params.xml  locationforecast-no-levels-params.xml  locationforecast_params1.xml  metno-wdb2ts-conf.xml  params-1.xml  params-2.xml  readcsv.cpp  readcsv.h  testconf1-params.xml  wdb2ts.mk  wind_components.csv
src/pgconpool/: Makefile.in  dbConnection.cc  dbConnection.h  dbConnectionException.h  dbConnectionHelper.h  dbConnectionPool.cc  dbConnectionPool.h  dbSetup.cc  dbSetup.h  parser.cc  parser.h  wdb2ts.mk
src/statd/: Makefile.in  README  statsd_client.cpp  wdb2ts.mk
src/tuple_container/: CSV.cpp  CSV.h  ITupleContainer.cpp  ITupleContainer.h  Makefile.in  PqTupleContainer.cpp  PqTupleContainer.h  SimpleTupleContainer.cpp  SimpleTupleContainer.h  iterator1.cpp  wdb2ts.mk
src/util/: Makefile.in  metno-wdb2ts-conf.xml  shape2wdb2ts.cpp  wdb2cvs.cpp  wdb2symbols.cpp  wdb2ts.mk
src/webFW/: ApacheAbortHandlerManager.cpp  ApacheAbortHandlerManager.h  ApacheLogger.cpp  ApacheLogger.h  ApacheModule.h  ApacheRequest.cpp  ApacheRequest.h  ApacheResponse.cpp  ApacheResponse.h  ApacheStream.cpp  ApacheStream.h  App.cpp  App.h  CErrLogger.cpp  CErrLogger.h  DefaultRequestHandlerManager.cpp  DefaultRequestHandlerManager.h  DefaultResponse.cpp  DefaultResponse.h  DefineApacheLogger.h  IAbortHandler.h  IAbortHandlerManager.h  Logger.h  Logger4cpp.h  RWMutex.cpp  RWMutex.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  RequestHandlerManager.cpp  RequestHandlerManager.h  Response.cpp  Response.h  TestRequest.cpp  TestRequest.h  UrlQuery.cpp  UrlQuery.h  exception.h  macros.h  (+2 more)
test/unit/: tantest.cpp  wdb2TsUnitTest.cpp  wdb2ts.mk
test/wdb2tsget/: GetThread.cpp  GetThread.h  HTTPClient.cpp  HTTPClient.h  LatLongBase.h  wdb2ts.mk  wdb2tsget_test.cpp
(+122 files in other folders)
